fix body overflow:hidden bug

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -65,7 +65,8 @@ body {
   font-size: 100%;
   background-color: var(--page-background);
   color: var(--text-color);
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* container */
